fix: add field road and direction in Flow. Renamed getRoad into getFlow in PathSegment. Update uses